added final calculations

--- a/style.css
+++ b/style.css
@@ -83,8 +83,22 @@ button:focus {
 	outline: 0;
 }
 
+.no-arrow {
+	/* Chrome, Safari, Edge, Opera */
+	input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
+
+	/* Firefox */
+	input[type='number'] {
+		-moz-appearance: textfield;
+	}
+}
+
 @media screen and (max-width: 600px) {
 	.money-img {
-		width: 200px;
+		width: 165px;
 	}
 }
